# programming-ml-to-dl

./: .gitignore  hello.py  pyproject.toml
ch02-your-first-learning-program/: ch02.ipynb  hello.py  pyproject.toml
ch04-hyperspace/: classifier.py  multi_regression_with_bias.py  multi_regression_without_bias.py  pyproject.toml
ch05-getting-real/: digit_classifier.py  mnist.py  pyproject.toml
ch07-the-final-challenge/: mnist.py  mnist_classifier.py  pyproject.toml
ch10-building-the-network/: forward_propagation.py  pyproject.toml
ch12-how-classifiers-work/: perceptron.py  pyproject.toml
ch16-deep-network/: network_shallow.py  pyproject.toml
ch19-convolutional-neural-network/: cifar10_cnn.py  pyproject.toml
