[project]
name = "programming-ml-to-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.1.2",
    "seaborn==0.9.0",
    "pandas==2.0.3",
]

[tool.uv]
managed = true
dev-dependencies = [
    "setuptools>=69.5.1",
]

[tool.uv.workspace]
members = ["ch02-your-first-learning-program", "ch04-hyperspace"]
